--- a/FORCE_DISP_F90_OPENMP/src/Makefile
+++ b/FORCE_DISP_F90_OPENMP/src/Makefile
@@ -4,28 +4,26 @@ CFLAGS=
 
 #
 # GFORTRAN compiler
-# uncomment the following lines to compile with gcc
-# fortran compiler
+#
 FC=gfortran
-FFLAGS = -O3 -cpp -fopenmp
-# end of GFORTRAN
+F2PY=-lgomp --opt="-Ofast -march=native" --f90flags="-fopenmp -cpp"
+FFLAGS = -Ofast -cpp -fopenmp
 
 
 #
 # Intel ifort compiler (>V15)
-# uncomment the following lines to compile with Intel
-# compiler
-# FC=ifort
+#
+#FC=ifort
+#F2PY=-L/opt/intel/compilers_and_libraries_2017.4.181/mac/compiler/lib -liomp5 --f90flags="-qopenmp -fpp"
 # debug with openmp
 #FFLAGS = -g -qopenmp -cpp -assume byterecl
 # debug without openmp
-#FFLAGS = -g -cpp -assume byterecl
+#FFLAGS = -g -cpp -assume byterecl -check
 #
 # run without openmp
 #FFLAGS = -O3 -cpp -assume byterecl
 # run with openmp
-# FFLAGS = -O3 -cpp -qopenmp -assume byterecl
-# end of ifort
+#FFLAGS = -O3 -cpp -qopenmp -assume byterecl
 
 ################## Nothing to be changed below #################
 .SUFFIXES: .o .f90
@@ -53,4 +51,10 @@ axitra :	dimension1.o dimension2.o parameter.o allocateArray.o initdata.o reflec
 
 convms :	parameter.o fsource.o convm.o fft2cd.o writesac.o  dll2km.o
 	$(FC) $(FFLAGS) -o convms parameter.o convm.o fft2cd.o writesac.o fsource.o dll2km.o
+
+######################################
+#                       PYTHON
+######################################
+python: parameter.o fft2cd.o fsource.o dll2km.o
+	f2py -c -m convfPy  -DF2PY_REPORT_ON_ARRAY_COPY=1 $(F2PY) convfPy.f90 fft2cd.o fsource.o dll2km.o
 
