add -fPIC option for linux and python compilation

--- a/FORCE_DISP_F90_OPENMP/src/Makefile
+++ b/FORCE_DISP_F90_OPENMP/src/Makefile
@@ -7,7 +7,7 @@ CFLAGS=
 #
 FC=gfortran
 F2PY=-lgomp --opt="-Ofast -march=native" --f90flags="-fopenmp -cpp"
-FFLAGS = -Ofast -cpp -fopenmp
+FFLAGS = -Ofast -cpp -fopenmp -fPIC
 
 
 #
