change default C compiler name

--- a/MOMENT_DISP_F90_OPENMP/src/Makefile
+++ b/MOMENT_DISP_F90_OPENMP/src/Makefile
@@ -1,6 +1,6 @@
 ################## PARAMETERS TO MODIFY *********************************
 
-CC=icc		#	C Compiler
+CC=gcc		#	C Compiler
 CFLAGS=-O3 	# 	and its options
 #
 # GFORTRAN compiler
