--- a/FORCE_DISP_F90_OPENMP/EXAMPLE/README.example
+++ b/FORCE_DISP_F90_OPENMP/EXAMPLE/README.example
@@ -5,8 +5,9 @@ axitra then convms
 
 source is a ricker wavelet, with pseudo period of 0.3 sec, in displacement
 axi.hist format:
+1 1 0 0 1.e20 10.
 1 7.5e20 148.0 84.0 -47.0 0. 0. 10.0
-source index, moment, strike, dip, rake,0.,0.,time_delay
+source index, fx_amplitude, fy_amplitude, fz_amplitude, common_source_amplitude (N), time_delay
 (see README file)
 
 For python exmaples:
